2005-01-22 14:21 Gregory John Casamento <greg_casamento@yahoo.com>

	* GNUmakefile: Reorganized the files in the resources, hearders
	and source lists.

2005-01-22 12:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: In [GormDocument detachObject:] made 
	[GormDocument setObject:isVisibleAtLaunch:] called only when the
	object is an NSWindow subclass.
	* GormImageEditor.m: Added implementation of addObject: to
	prevent addition of duplicate images.
	* GormImage.h: Added isEqual: so that containsObject: can
	find the image.
	* GormImage.m: Added isEqual: declaration.
	* GormSoundEditor.m: Added implementation of addObject to
	prevent addition of duplicate sounds.
	* GormSound.h: Added isEqual: so that containsObject can
	find the sound.
	* GormSound.m: Added isEqual: declaration.

2005-01-11 22:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GModelDecoder.m: Default NSWindows being imported from the
	.gmodel to the default window background color in the method
	[GModelApplication initWithModelUnarchiver:].

2005-01-09 01:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Added missing changeFont: method.
	* GormClassManager.m: Changed code to read only the additions to 
	FirstResponder from the data.classes file.
	* GormFilePrefsManager.m: Updated version to 0.8.7.
	* GormImageEditor.m: Made some logs "debug".
	* GormInfo.plist: Updated version.
	* GormInternalViewEditor.m: Made some logs "debug".
	* Palettes/1Windows/GormNSWindowInspector.gorm: Changes to layout
	* Palettes/1Windows/GormNSWindowSizeInspector.gorm: Same.

2005-01-08 18:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImage.h: Moved the declaration for setArchiveByName: here.
	* GormImage.m: Moved the code for the category here.
	* GormMatrixEditor.m: Included GormImage.h.

2005-01-08 18:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Corrected bug#11534.